--- a/src/static/Homepage.css
+++ b/src/static/Homepage.css
@@ -1,14 +1,14 @@
 .homepage {
   position: relative;
   width: 100%;
-  height: 645px;
+  height: 100vh;
   background-color: #000;
   -webkit-clip-path: polygon(100% 0, 100% 64%, 50% 100%, 0 64%, 0 0);
   clip-path: polygon(100% 0, 100% 64%, 50% 100%, 0 64%, 0 0);
   z-index: -1;
 }
 
-@media (max-width: 968px) {
+/* @media (max-width: 968px) {
   .homepage {
     height: 600px;
   }
@@ -18,4 +18,4 @@
   .homepage {
     height: 540px;
   }
-}
+} */
