--- a/src/static/Main.css
+++ b/src/static/Main.css
@@ -9,9 +9,6 @@
 .headline_one,
 .headline_two {
   font-size: 70px;
-  -webkit-text-stroke-width: 3px;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-color: #ffffff;
   clip-path: polygon(0 0, 100% 0, 100% 0%, 0 0%);
   animation: textEffect 1000ms ease-in-out forwards;
 }
@@ -50,7 +47,7 @@
 .quote_one,
 .quote_two {
   font-size: 12px;
-  color: #ffffff81;
+  color: #5f5f5f;
   overflow: hidden;
   padding: 1em 4em;
   opacity: 0;
@@ -97,7 +94,7 @@
 
 #navigate_btn {
   position: absolute;
-  bottom: 22px;
+  bottom: 30px;
   left: 50%;
   transform: translate(-50%);
   z-index: 3;
@@ -149,14 +146,14 @@
   }
 }
 
-@media (max-width: 571px) {
+@media (max-width: 480px) {
   .main_wrapper {
     padding-left: 2em;
   }
 
   .headline_one,
   .headline_two {
-    font-size: 30px;
+    font-size: 43px;
   }
   .quote_one,
   .quote_two {
