article page added!

--- a/src/static/Main.css
+++ b/src/static/Main.css
@@ -47,7 +47,7 @@
 .quote_one,
 .quote_two {
   font-size: 12px;
-  color: #5f5f5f;
+  color: #5d5d5d;
   overflow: hidden;
   padding: 1em 4em;
   opacity: 0;
