--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 body {
+  overflow-x: hidden;
   height: 100vh;
   font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
