--- a/src/static/Header.css
+++ b/src/static/Header.css
@@ -11,7 +11,7 @@
   font-size: 12px;
   color: #fff;
   clip-path: polygon(0 0, 100% 0, 100% 0%, 0 0%);
-  animation: labelEffect 2000ms ease-in-out 1200ms forwards;
+  animation: labelEffect 2000ms ease-out 3900ms forwards;
 }
 
 @keyframes labelEffect {
@@ -23,7 +23,7 @@
 #plant_ {
   display: block;
   clip-path: polygon(0 0, 100% 0, 100% 0%, 0 0%);
-  animation: plantEffect 2000ms ease-in-out 1200ms forwards;
+  animation: plantEffect 2000ms ease-in-out 3900ms forwards;
 }
 
 @keyframes plantEffect {
