--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@ body {
   font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #050505;
+  background-color: #0e0e0e;
 }
