--- a/src/static/Header.css
+++ b/src/static/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0.3em 2em;
-  background-color: #050505;
+  background-color: #0e0e0e;
 }
 
 .header_label {
