--- a/src/static/Article.css
+++ b/src/static/Article.css
@@ -36,10 +36,10 @@
   line-height: 28px;
   font-size: 14px;
   color: #5d5d5d;
-  opacity: 1;
+  opacity: 0;
   overflow: hidden;
-  transform: translateY(55px);
-  transition: opacity 1400ms ease-out, transform 1400ms ease-out;
+  transform: translateY(75px);
+  transition: opacity 1000ms ease-out 800ms, transform 1000ms ease-out 800ms;
 }
 
 .article_images {
@@ -53,14 +53,14 @@
 
 .img_ {
   display: block;
-  width: 90%;
-  margin: 1em auto;
+  width: 70%;
+  margin: 1.5em auto;
 }
 
 #article_img_one,
 #article_img_two {
   opacity: 0;
-  border-radius: 100px;
+  border-radius: 1px 50px 0px 50px;
   transform: translateX(50px);
   transition: all 1000ms ease-in-out;
 }
