--- a/src/static/View.css
+++ b/src/static/View.css
@@ -46,12 +46,13 @@
 }
 
 .view_img {
+  opacity: 0;
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
-  transform: scale(0.95);
+  transform: translateY(55px) scale(0.95);
   transition: transform 400ms ease-out;
 }
 
